# ink-compiler-be

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  logging_config.yaml  test_queue.sh
compilation_target/: Cargo.toml  lib.rs  template-lib.rs
src/: main.rs
src/api/: contract_api.rs
src/models/: api_models.rs  contract_model.rs  db_models.rs  mod.rs
src/repository/: mongodb_repo.rs
src/tests/: main_deployments_tests.rs  main_get_contract_tests.rs  main_get_deployments_tests.rs  main_post_contract_tests.rs  main_post_deployments_tests.rs
src/tests/utils/: compiler_tests.rs  contract_utils_tests.rs  sanity_check_tests.rs
src/utils/: compilation_queue.rs  compiler.rs  constants.rs  contract_utils.rs  cors.rs  mod.rs  sanity_check.rs
