[package]
name = "compiler-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
sha2 = "0.10.6"
log = "0.4"
log4rs = "1"
serde_json = "1.0.96"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
